--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,7 +1,7 @@
 
 
 # dependencies
-client/node_modules
+/node_modules
 /.pnp
 .pnp.js
 
@@ -18,7 +18,7 @@ client/node_modules
 .env.test.local
 .env.production.local
 
-client/src/config
+/src/config
 
 npm-debug.log*
 yarn-debug.log*
